    * repos suggested config via svn:auto-props and svn:global-ignores (r1401908)
    * support for custom keyword definitions in svn:keywords (issue #890)
    * support for server-side keyword expansion in mod_dav_svn (r1466055)

  - Client-side bugfixes:
    * 

  - Server-side bugfixes:
    * SVNParentPath / repository listing now authz-filtered (r1408184)

  - Other tool improvements and bugfixes:
    * 'svnmucc' promoted to first-class supported utility (issue #3308)
  
 Developer-visible changes:
  - General:
    * Now require Python 2.5 for tests and dev tools (r1243627)
    * configure defaults to --without-apache-libexecdir (r1469862)

  - API changes:
    * fix inconsistent handling of log revs without changed paths (issue #3694)

  - Bindings:
    * star-imports in swig-py only import 'svn_*' symbols (r1303375)


Version 1.7.9
(04 Apr 2013, from /branches/1.7.x)
http://svn.apache.org/repos/asf/subversion/tags/1.7.9
 User-visible changes
  - Client-side bugfixes:
    * improved error messages about svn:date and svn:author props. (r1440620)
    * fix local_relpath assertion (issue #4257)
    * fix memory leak in `svn log` over svn:// (r1458341)
    * fix incorrect authz failure when using neon http library (issue #4332)
    * fix segfault when using kwallet (r1421103)
    
  - Server-side bugfixes:
    * svnserve will log the replayed rev not the low-water rev. (r1461278)
    * mod_dav_svn will omit some property values for activity urls (r1453780)
    * fix an assertion in mod_dav_svn when acting as a proxy on / (issue #4272)
    * improve memory usage when committing properties in mod_dav_svn (r1443929)
    * fix svnrdump to load dump files with non-LF line endings (issue #4263)
    * fix assertion when rep-cache is inaccessible (r1422100)
    * improved logic in mod_dav_svn's implementation of lock. (r1455352)
    * avoid executing unnecessary code in log with limit (r1459599)

 Developer-visible changes:
  - General: